[package]
name = "lnm-sdk"
version = "0.6.0"
authors = ["Rafael Lemos <contact@flemosr.com>"]
edition = "2024"
rust-version = "1.88"
description = "Rust SDK for interacting with LN Markets."
documentation = "https://docs.rs/lnm-sdk"
readme = "README.md"
homepage = "https://github.com/flemosr/lnm-sdk"
repository = "https://github.com/flemosr/lnm-sdk"
license = "Apache-2.0"
keywords = ["bitcoin", "trading", "futures", "lnmarkets", "crypto"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "finance"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["now", "serde"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hex = "0.4.3"
hmac = "0.13.0"
http-body-util = "0.1.3"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
webpki-roots = "1.0.8"

[dev-dependencies]
dotenvy = "0.15.7"
